e2e/tests/consumer_in_gateway.yml
apiVersion: htnn.mosn.io/v1
kind: Consumer
metadata:
  name: rick
spec:
  auth:
    keyAuth:
      config:
        key: rick
  filters:
    limitReq:
      config:
        average: 1
        period: 0.5s
    demo:
      config:
        hostName: rick
---
apiVersion: htnn.mosn.io/v1
kind: Consumer
metadata:
  name: rick
  # consumer from other namespace should not take effect
  namespace: e2e-another
spec:
  auth:
    keyAuth:
      config:
        key: rick
  filters:
    demo:
      config:
        hostName: evil-morty
---
apiVersion: htnn.mosn.io/v1
kind: Consumer
metadata:
  name: morty
spec:
  auth:
    keyAuth:
      config:
        key: morty
---
apiVersion: htnn.mosn.io/v1
kind: Consumer
metadata:
  name: doraemon
  namespace: default
spec:
  auth:
    keyAuth:
      config:
        key: doraemon
---
apiVersion: htnn.mosn.io/v1
kind: FilterPolicy
metadata:
  name: policy
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: default
  filters:
    keyAuth:
      config:
        keys:
        - name: Authorization
    consumerRestriction:
      config:
        denyIfNoConsumer: true
---
apiVersion: htnn.mosn.io/v1
kind: FilterPolicy
metadata:
  name: policy2
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: default
  filters:
    demo:
      config:
        # this filter will be overridden by the filter in the consumer
        hostName: doraemon
