e2e/tests/httproute_other_namespace.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test
spec:
  parentRefs:
  - name: default
    namespace: e2e
  hostnames: ["localhost"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: backend
      port: 8080
---
apiVersion: htnn.mosn.io/v1
kind: HTTPFilterPolicy
metadata:
  name: policy
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: test
  filters:
    demo:
      config:
        hostName: doraemon
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test
  namespace: e2e-another
spec:
  parentRefs:
  - name: default
    namespace: e2e-another
  hostnames: ["localhost"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: backend
      port: 8080
---
apiVersion: htnn.mosn.io/v1
kind: HTTPFilterPolicy
metadata:
  name: policy
  namespace: e2e-another
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: test
  filters:
    demo:
      config:
        hostName: Nobi-Nobita
