e2e/tests/istio_gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs
  namespace: istio-system
spec:
  gateways:
  - default
  hosts:
  - "default.local"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: backend
        port:
          number: 8080
---
apiVersion: htnn.mosn.io/v1
kind: FilterPolicy
metadata:
  name: policy
  namespace: istio-system
spec:
  targetRef:
    group: networking.istio.io
    kind: Gateway
    name: default
  filters:
    demo:
      config:
        hostName: doraemon
