e2e/tests/istio_gateway_embedded_hfp.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: default-embedded
  namespace: istio-system
  annotations:
    htnn.mosn.io/httpfilterpolicy: |
      {"apiVersion":"htnn.mosn.io/v1","kind":"HTTPFilterPolicy","metadata":{"name":"policy"},"spec":{"filters":{"demo":{"config":{"hostName":"micky"}}}}}
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.local'
    port:
      name: http
      number: 18000
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs
  namespace: istio-system
spec:
  gateways:
  - default-embedded
  hosts:
  - "default.local"
  http:
  - match:
    - uri:
        exact: /echo
    name: route
    route:
    - destination:
        host: backend
        port:
          number: 8080
