e2e/tests/listener_patch.yml
apiVersion: htnn.mosn.io/v1
kind: FilterPolicy
metadata:
  name: policy
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: default
  filters:
    listenerPatch:
      config:
        accessLog:
        - name: envoy.access_loggers.file
          typedConfig:
            "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
            path: /dev/stdout
            logFormat:
              textFormatSource:
                inlineString: "added access log: %DOWNSTREAM_LOCAL_ADDRESS% %EMIT_TIME%\n"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test
spec:
  parentRefs:
  - name: default
    namespace: e2e
  hostnames: ["localhost"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: backend
      port: 8080
